[package]
name = "busy_bee"
version = "0.1.0"
authors = ["Dave Thomas <kukulcanenator@googlemail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "1.9.1"
byteorder = "1.3.2"
num-derive = "0.3"
num-traits = "0.2"